# ChangeLog for dev-util/subversion
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.313 2008/06/16 08:34:45 hollow Exp $

*subversion-1.5.0_rc9-r1 (16 Jun 2008)

  16 Jun 2008; Benedikt Böhm <hollow@gentoo.org>
  +files/1.5.0/http-library.patch, +subversion-1.5.0_rc9-r1.ebuild:
  fix #226577 again, fix #221931

  15 Jun 2008; Benedikt Böhm <hollow@gentoo.org>
  -subversion-1.5.0_rc5.ebuild, subversion-1.5.0_rc9.ebuild:
  fix #226577

  14 Jun 2008; nixnut <nixnut@gentoo.org> subversion-1.5.0_rc9.ebuild:
  Added ~ppc

*subversion-1.5.0_rc9 (11 Jun 2008)

  11 Jun 2008; Benedikt Böhm <hollow@gentoo.org>
  +subversion-1.5.0_rc9.ebuild:
  version bump wrt #224751

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org>
  subversion-1.5.0_rc5.ebuild:
  keyword ~sparc-fbsd

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org>
  subversion-1.5.0_rc5.ebuild:
  keyword ~x86-fbsd

  01 Jun 2008; Benedikt Böhm <hollow@gentoo.org> metadata.xml,
  subversion-1.4.5.ebuild, subversion-1.4.6.ebuild,
  subversion-1.4.6-r2.ebuild, -subversion-1.5.0_rc4.ebuild,
  subversion-1.5.0_rc5.ebuild:
  fix #221673

  20 May 2008; Ferris McCormick <fmccor@gentoo.org>
  subversion-1.5.0_rc5.ebuild:
  Restore ~sparc keyword, Bug #219882.

  17 May 2008; Jeroen Roovers <jer@gentoo.org> subversion-1.5.0_rc5.ebuild:
  Marked ~hppa (bug #219882).

  12 May 2008; Raúl Porcel <armin76@gentoo.org>
  subversion-1.5.0_rc5.ebuild:
  Readd ~alpha/~ia64 wrt #219882

  11 May 2008; Markus Rothe <corsair@gentoo.org>
  subversion-1.5.0_rc5.ebuild:
  Added ~ppc64; bug #219882

*subversion-1.5.0_rc5 (07 May 2008)

  07 May 2008; Benedikt Böhm <hollow@gentoo.org>
  +subversion-1.5.0_rc5.ebuild:
  version bump wrt #220793

  01 May 2008; Benedikt Böhm <hollow@gentoo.org>
  subversion-1.5.0_rc4.ebuild:
  serf and neon can be used at the same time; fix libtool 2.2 support

  01 May 2008; Benedikt Böhm <hollow@gentoo.org>